<resources>
    <string name="app_name">月台</string>
    <string name="edit_null">"请不要输入空格"</string>
    <string name="phone_login">账号登录</string>
    <string name="verify_code_login">验证码登录</string>
    <string name="phone">账号</string>
    <string name="verify_code">验证码</string>
    <string name="password">密码</string>
    <string name="send_verify_code">发送验证码</string>
    <string name="register">注册</string>
    <string name="forget_password">忘记密码?</string>
    <string name="login">登录</string>
    <string name="apply_for">申请账户</string>
    <string name="setting">设置</string>
    <string name="photograph">拍照</string>
    <string name="select_photo">从手机相册中选择</string>
    <string name="cancel">取消</string>
    <string name="take_photo">拍照</string>
    <string name="get_photo">相册</string>
    <string name="sdcard_no_exist">SD卡不存在</string>
    <string name="camera_not_prepared">摄像头尚未准备好</string>
    <string name="action_settings">Settings</string>
    <string name="card_manage">卡片管理</string>
    <string name="tv_control">操作人：高大爽</string>
    <string name="tv_connect">交接班</string>
    <string name="organization_two_code">机构二维码</string>
    <string name="tv_balance">余额</string>
    <string name="tv_coupon">优惠券</string>
    <string name="tv_indent">订单</string>
    <string name="tv_shopping_car">购物车</string>
    <string name="tv_info">个人信息</string>
    <string name="tv_business">商户管理</string>
    <string name="tv_statement">报表管理</string>
    <string name="tv_zhanghu_pay">账户充值</string>
    <string name="tv_car_manage">车辆管理</string>
    <string name="tv_car_weizhang">车辆违章</string>
    <string name="tv_pay_pwd">支付密码</string>
    <string name="tv_change_oil">修改商品价格</string>
    <string name="tv_jisuan">结算</string>
    <string name="tv_company_name">北京卡友在线物流公司</string>
    <string name="tv_administrator">管理员</string>
    <string name="tv_user_name">高大爽</string>
    <string name="tv_info_company">某某某某某某物流公司</string>
    <string name="tv_info_phone">联系电话</string>
    <string name="but_change_login_pwd">修改登录密码</string>
    <string name="but_info_sure">确定</string>
    <string name="tv_old_pwd">输入旧密码</string>
    <string name="tv_new_pwd">设置新密码</string>
    <string name="tv_affirm_pwd">确认密码</string>
    <string name="tv_bs_jinweidu">经纬度</string>
    <string name="tv_huoqujinweidu">获取经纬度</string>
    <string name="tv_type">机构类型</string>
    <string name="edit_type_no_change">机构类型不可修改</string>
    <string name="tv_people_name">负责人姓名</string>
    <string name="edit_name">请输入姓名</string>
    <string name="tv_people_phone">负责人电话</string>
    <string name="edit_phone">请输入电话</string>
    <string name="tv_zhanghao">对公账号</string>
    <string name="edit_zhanghao">请输入账号</string>
    <string name="tv_province">省份</string>
    <string name="edit_province">请输入省份</string>
    <string name="tv_city">城市</string>
    <string name="edit_city">请输入城市</string>
    <string name="tv_bs_location">详细地址</string>
    <string name="edit_loaction">请输入详细地址</string>
    <string name="tv_jiguo_phone">机构电话</string>
    <string name="edit_jiguo_phone">请输入电话</string>
    <string name="but_bs_ok">确定</string>
    <string name="but_all">全选</string>
    <string name="but_merge">已选中(0)张卡</string>
    <string name="but_all2">全部（0）</string>
    <string name="tv_phone_cardvip">手机号：</string>
    <string name="tv_card_details">车牌号：</string>
    <string name="edit_car_details_bind">请输入车牌号绑定</string>
    <string name="edit_name_carvip">高大爽</string>
    <string name="edit_pwd_carvip">123456</string>
    <string name="tv_send_car">发卡机构：</string>
    <string name="tv_activate_time">激活时间：</string>
    <string name="tv_all_pay">总充值：</string>
    <string name="tv_all_consume">总消费：</string>
    <string name="tv_all_integral">总积分：</string>
    <string name="tv_activate_times">2018-01-18 18:03:22</string>
    <string name="tv_usable_jife">可用积分：</string>
    <string name="tv_sale_manager">销售经理：</string>
    <string name="but_save_message">保存信息</string>
    <string name="tv_vip_card">会员卡</string>
    <string name="tv_car_count">暂无车辆</string>
    <string name="tv_input_car_num">输入车牌号</string>
    <string name="tv_self_car">自有车辆</string>
    <string name="tv_weizhangshu">违章数 0</string>
    <string name="tv_fakuan">罚款 0</string>
    <string name="tv_koufen">扣分 0</string>
    <string name="tv_congratulation">恭喜您！没有违章记录！</string>
    <string name="edit_self_phone">请输入本人手机号码</string>
    <string name="edit_input_code">请输入验证码</string>
    <string name="tv_send_code">发送验证码</string>
    <string name="edit_setting_new_pwd">请设置您的新密码</string>
    <string name="edit_new_pwd">再次输入新密码</string>
    <string name="but_ok">确定</string>
    <string name="tv_download_two_code">将以上二维码分享给好友下载您将获得积分奖励</string>
    <string name="tv_contact_us">联系我们: 400-040-1333</string>
    <string name="cb_unused">未使用(0)</string>
    <string name="cb_yishiyong">已使用(0)</string>
    <string name="cbhave_expired">已过期(0)</string>
    <string name="tv_bind_car_num">请输入您要绑定的车牌号</string>
    <string name="tv_car_num">车牌号：</string>
    <string name="tv_pwd">密码：</string>
    <string name="tv_card_pwd">请输入卡片密码</string>
    <string name="but_bind_car_ok">确认</string>
    <string name="tv_aboutbdt">关于物流宝兑通</string>
    <string name="tv_system_update">系统检查更新</string>
    <string name="tv_user_feedback">用户反馈</string>
    <string name="tv_contact_setting">联系我们</string>
    <string name="tv_clean">清除缓存</string>
    <string name="tv_wuliu_company">物流公司</string>
    <string name="tv_company_qrcode">某某某某某某某某某某某某某某物流公司</string>
    <string name="tv_address">北京市朝阳区百子湾沿海赛洛城2271223</string>
    <string name="www_baoduitong_com">www.baoduitong.com</string>
    <string name="baoduitong_co_ldt">BaoDuiTong Co.,Ldt.</string>
    <string name="tv_name_cardvip">姓 名：</string>
    <string name="tv_cardvip_pwd">密 码：</string>
    <string name="st_unpaid">未支付</string>
    <string name="tv_search">搜索</string>
    <string name="tv_no_data">暂无数据</string>

    <string name="toast_2">服务已断开!</string>
    <string name="read_alter">请将卡片贴置设备NFC区域</string>
    <string name="read_alter1">请将ETC卡片贴置设备NFC区域</string>
    <string name="read_alter2">您有待圈存订单请贴卡圈存</string>

    <string name="title">请选择时间</string>
    <string name="confirm">确定</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="hour">时</string>
    <string name="minute">分</string>
    <string name="zhuanghuo">装货</string>
    <string name="xiehuo">卸货</string>
</resources>
